# ch8em

./: .gitignore  CMakeLists.txt  README.md
src/: chip8.c  chip8.h  chip8_instruction.c  chip8_instruction.h  macros.h  main.c  opcode.h  output.c  output.h
